# Hope-backend-rust

./: Cargo.toml  Dockerfile
config/: hope-expressions.json
src/: main.rs
src/config/: mod.rs
src/core/: analyzer.rs  mod.rs  persona.rs
src/middleware/: auth.rs
src/models/: activity.rs  chat.rs  journal.rs  meditation.rs  mod.rs  mood.rs  notifications.rs  resilience.rs  user.rs
src/routes/: activity.rs  analytics.rs  auth.rs  chat.rs  health.rs  journal.rs  mod.rs  mood.rs  notifications.rs  resilience.rs  safety.rs  subscription.rs  user.rs  wisdom.rs  ws.rs
src/services/: ai.rs  analysis.rs  auth.rs  email.rs  jobs.rs  memory.rs  mod.rs
src/utils/: cache.rs  database.rs  mod.rs  ws_hub.rs
