[package]
name = "hope-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server & concurrency
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }

# Database
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.9"
regex = "1.10"

# Auth & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenvy = "0.15"

# AI & Network
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Speed & Logging
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5" # Concurrent RAM cache
lazy_static = "1.4"
